--- a/BACK-END/package.json
+++ b/BACK-END/package.json
@@ -17,11 +17,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fs-extra": "^11.1.1",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
     "nanoid": "^4.0.2",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
